# Med-Ed-Explainer-Beta

./: .env.example  .gitignore  CLAUDE.md  Medical Longform AI Explainers System.json  PLAN.md  README.md  api.py  app.py  gui.py  pyproject.toml  run.py  setup_airtable.py
data/prompts/: image_prompt.txt  system_prompt.txt  video_prompt.txt
remotion/: package-lock.json  package.json
remotion/src/: MedicalVideo.tsx  Root.tsx  SceneClip.tsx  TextOverlay.tsx  types.ts
tests/: test_alignment.py  test_extract.py  test_media_sort.py  test_project_store.py  test_prompt_grounding.py  test_short_form.py
tools/: airtable_client.py  alignment.py  analyze.py  animations.py  avatar.py  character_sheet.py  compose.py  compose_remotion.py  creative_brief.py  extract.py  extract_visuals.py  generate_content.py  generate_images.py  generate_script.py  generate_segments.py  generate_voice.py  models.py  parallel.py  project_store.py  provider.py  quality.py  review.py
